增加程序版本升级自动更新配置的功能

--- a/AutoBark/App.config
+++ b/AutoBark/App.config
@@ -40,6 +40,9 @@
             <setting name="notifyCheck" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UpdateSettings" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AutoBark.Properties.Settings>
     </userSettings>
 </configuration>
