--- a/AutoBark/Properties/Settings.settings
+++ b/AutoBark/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="notifyCheck" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
